# GameCenter-FastAPI

./: .env  .env.example  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  create_curators.py  create_player_teams.py  create_station_order.py  create_stations.py  create_superuser.py  create_tasks.py  create_users.py  db.py  drop_tables.py  initilizer.py  main.py
app/api/: all_routers.py  dependencies.py  routers.py
app/api/v1/: auth.py  curator.py  player_team.py  station.py  station_order.py  task.py  user.py
app/config/: base_config.py  config.py  log_config.py  logging.py
app/core/: admin_config.py  config.py
app/db/: db.py
app/models/: __init__.py  admin.py  curator.py  models.py  player_team.py  station.py  station_order.py  task.py  user.py
app/repositories/: __init__.py  base.py  curator.py  curator_repository.py  player_team.py  player_team_repository.py  station.py  station_order.py  task.py  task_repository.py
app/schemas/: __init__.py  base.py  curator.py  player_team.py  station.py  station_order.py  task.py  user.py
app/services/: Curator.py  PlayerTeam.py  Task.py  __init__.py  base.py  base_servise.py  curator.py  image.py  player_team.py  station.py  station_order.py  task.py
app/utils/: admin_panel.py  auth.py  auth_utils.py  create_superuser.py  dependencies.py  exception.py  generate_password.py  helpers.py  random_station.py  register_admin.py  upload_files.py
migrations/models/: 0_20250917005008_init.py  1_20250918140006_time_to_field.py
nginx/: app.conf
tests/: conftest.py  main_tests.py  models_test.py  test_dependencies.py
