[project]
name = "gamecenter-fastapi"
version = "0.1.0"
description = "gamecenter for SpbSUT meetup"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich>=0.9.1",
    "aioredis>=2.0.1",
    "asyncpg>=0.30.0",
    "fastadmin[fastapi,tortoise-orm]>=0.2.22",
    "fastapi>=0.116.1",
    "fastapi-admin>=1.0.4",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]
system = [
    "setuptools>=80.9.0",
]
