[project]
name = "gamecenter-fastapi"
version = "1.0.0"
description = "gamecenter for SpbSUT meetup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aerich>=0.9.1",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt==4.0.1",
    "fastadmin[fastapi,tortoise-orm]>=0.2.22",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "passlib==1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
]
system = [
    "setuptools>=80.9.0",
]



[tool.aerich]

tortoise_orm = "app.db.DB_CONFIG"

location = "./migrations"

src_folder = "./."

